--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,20 @@
     border: 2px solid grey;
     padding-bottom: 25px;
 }
+.App {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+
+
+
 .display {
     margin-top: 25px;
     height: 100px;
-    width: 450px;
+    width: 100%;
+    max-width: 400px;
     border-radius: 50px;
     color: white;
     background-color: #322c2d;
@@ -18,5 +28,7 @@
     justify-content: flex-end;
     align-items: flex-end;
     padding-right: 8%;
+    
     font-size: 5.0rem;
   }
+
