--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .container {
-    background-color: #c00025;
+    background-color: #A81D37;
     width: 100%;
     max-width: 550px;
     border-radius: 15px;
@@ -13,25 +13,26 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border: 2px dashed pink;
+    /* border: 2px dashed pink; */
 }
 
 .top-row{
     width: 100%;
     display: flex;
-    border: 2px dashed green;
+    /* border: 2px dashed green; */
 
 }
 
 .bottom-row{
     width: 100%;
     display: flex;
-    justify-content: space-around;
-    border: 2px dashed green;
+    /* justify-content: space-evenly; */
+    /* border: 2px dashed green; */
 }
 
 .specials{
     width: 100%;
+    
 }
 
 .numbers{
@@ -39,20 +40,29 @@
 }
 
 .right-box{
-    border: 2px dashed orange;
+    /* border: 2px dashed orange; */
+    display: flex;
+    justify-content: space-between;
+    margin-left: 22px;
+    margin-right: 52px;
 }
 .left-box{
-    border: 2px dashed orange;
+    /* border: 2px dashed orange; */
+    margin-left: 50px;
+    /* margin-right: */
 }
 
 .top-left-box{
     display: flex;
     flex-direction: column;
-    border: 2px dashed purple;
+    /* justify-content: space-between; */
+    /* border: 2px dashed purple; */
 }
 
 .bottom-left-box{
-    
+    width: 100%;
+    margin-left: 30px;
+    /* padding: 20%; */
 }
 
 .operators{
@@ -80,17 +90,24 @@
     background-color: #237192;
     border-radius: 50%;
     font-size: 3rem;
+    border: none;
+    padding: 10px;
+    margin: 15px;
+    display: flex;
+    /* justify-content: space-evenly; */
+    /* justify-items: space-evenly; */
+    align-items: 
     
 }
 
 .numbers-button {
     color: white;
     background-color: #184379;
-    border-radius: 50%;
+    border-radius: 70%;
     font-size: 3rem;
-    /* display:flex; */
-    
-    /* flex-wrap: wrap; */
+    border: none;
+    margin: 10px;
+    padding: 20px;
 }
 
 
@@ -99,7 +116,10 @@
     background-color: #215C9E;
     border-radius: 50%;
     font-size: 3rem;
-    display: flex;
-    justify-content: space-between;
+    padding: 10px;
+    /* justify-content: space-evenly; */
+    margin: 20px;
+    /* align-content: center; */
+    border: none;
 }
 
